# firmware-stm3210fx3

./: .gitignore  AUTHORS  COPYING  ChangeLog  HACKING  MAINTAINERS  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  VERSION  aclocal.m4  config.h  config.status  configure  configure.ac  show_sources.sh
autom4te.cache/: output.0  requests  traces.0  traces.1
doc/: Doxyfile  Makefile.am  Makefile.in  file.txt
src/: Makefile.am  Makefile.in
src/Source/: main.c  startup_stm32f10x.c  stm32f10x_conf.h
src/common/: openocd.cfg
src/common/KERNEL/: stf_syscalls_minimal.c  stf_syscalls_minimal.h  stm32_flash.ld
src/common/KERNEL/FreeRTOS/: FreeRTOSConfig.h
src/common/KERNEL/FreeRTOS/Source/portable/GCC/ARM_CM3/: port.c~
src/common/STM32F10x/Libraries/CMSIS/CM3/DeviceSupport/ST/STM32F10x/: system_stm32f10x.c
src/common/STM32F10x/Libraries/CMSIS/CM3/DeviceSupport/ST/STM32F10x/startup/gcc_FreeRTOS/: startup_stm32f10x_cl.c  startup_stm32f10x_cl.c~  startup_stm32f10x_hd.c  startup_stm32f10x_md.c
